[package]
name = "vpn-rs"
version = "1.0.0"
edition = "2024"

[[bin]]
name = "client"
path = "src/client.rs"

[[bin]]
name = "server"
path = "src/server.rs"

[dependencies]
# example = "1.0.0"
tun = "0.7"
pnet = "0.35.0"
tokio = { version = "1", features = ["full"] }
tokio-openssl = "0.6"
openssl = { version = "0.10" }
clap = { version = "4.5.53", features = ["derive"] }
