[package]
name = "vpn-rs"
version = "1.0.0"
edition = "2024"

[[bin]]
name = "client"
path = "src/client.rs"

[[bin]]
name = "server"
path = "src/server.rs"

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
libc = "0.2.178"
openssl = "0.10.75"
pnet = "0.35.0"
tokio = { version = "1", features = ["full"] }
tokio-openssl = "0.6"
tun = { version="0.7", features = ["async"] }
